--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="" color="">
     <title>Jogo da Memória</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="icone.png" type="image/png">
+    <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
     <div class="memory-game">
