--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta content="" color="">
     <title>Jogo da Memória</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="icon.png" type="image/png">
+    <link rel="icon" href="img/icon.png" type="image/png">
 </head>
 <body>
+    <h1>Jogo da Memória</h1>
+    <h2>Desafie sua memória e divirta-se!</h2>
     <div class="memory-game">
         <div class="memory-card" data-card="1">
             <div class="front-face"></div>
